--- a/poem/Cargo.toml
+++ b/poem/Cargo.toml
@@ -47,7 +47,7 @@ i18n = [
     "fluent",
     "fluent-langneg",
     "fluent-syntax",
-    "unic-langid",
+    "icu_locid",
     "intl-memoizer",
 ]
 acme = ["acme-native-roots"]
@@ -147,7 +147,7 @@ sse-codec = { version = "0.3.2", optional = true }
 fluent = { version = "0.16.0", optional = true }
 fluent-langneg = { version = "0.14.0", optional = true }
 fluent-syntax = { version = "0.11.0", optional = true }
-unic-langid = { version = "0.9.0", optional = true, features = ["macros"] }
+icu_locid = { version = "1.4.0", optional = true }
 intl-memoizer = { version = "0.5.1", optional = true }
 ring = { version = "0.16.20", optional = true }
 reqwest = { workspace = true, features = ["json"], optional = true }
