--- a/poem/Cargo.toml
+++ b/poem/Cargo.toml
@@ -19,7 +19,7 @@ categories = [
 ]
 
 [features]
-default = ["server"]
+default = ["server", "tower-compat"]
 
 server = ["tokio/rt", "tokio/net", "hyper/server"]
 websocket = ["tokio/rt", "tokio-tungstenite", "base64"]
@@ -108,7 +108,7 @@ async-compression = { version = "0.4.0", optional = true, features = [
     "brotli",
     "deflate",
 ] }
-tower = { version = "0.4.8", optional = true, default-features = false, features = [
+tower = { version = "0.5.2", optional = true, default-features = false, features = [
     "util",
     "buffer",
 ] }
